--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://tark000.github.io/my-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
